--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,227 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+*{margin: 0px; padding: 0px;}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+body{font-family: "Open Sans", sans-serif !important; background: #ebe9e9; overflow-x: hidden;}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+                                         /* HEADER */
+::-webkit-scrollbar{width: 5px !important; height: 5px !important;}
+::-webkit-scrollbar-thumb{background: #0858f7 !important;}
+::-webkit-scrollbar-track{background: transparent !important;}
 
-.App-link {
-  color: #61dafb;
-}
+.btn-blue{background: #0858f7 !important; font-size: 14px !important; font-weight: 600; color: #fff !important; text-transform: capitalize !important; border-radius: 5px !important; border-radius: 8px !important;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.btn-lg{padding: 7px 25px !important;}
+.btn-big{padding: 8px 25px !important; font-size: 16px !important;}
+
+.btn-round{border-radius: 30px !important;}
+
+.full{max-width: 100% !important; flex: 0 0 100% !important; width: 100%;}
+
+.link{color: #5e5d72; font-weight: 600;}
+.link:hover{color: #0858f7 !important; text-decoration: none;}
+
+.link.color{color: #0858f7 !important; text-decoration: none; margin-left: 5px;}
+
+header{width: 100%; height: 80px; background: rgba(255, 255, 255, 0.8); position: fixed; top: 0px; left: 0px; z-index: 1000; -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px);}
+header .logo{width: 45px;}
+header .row{margin: 0px !important;}
+header span {color: #000;}
+
+header button.rounded-circle{min-width: 40px !important; width: 40px !important; height: 40px !important; background: #f0f5ff !important; color: #292929;}
+header button.rounded-circle svg{color: #292929; font-size: 18px !important; transition: all 0 2s ease-in-out;}
+
+header button.rounded-circle:hover svg{color: #0858f7 !important;}
+
+header .part2{padding-left: 40px;}
+
+.searchBox{width: 250px; height: 40px; background: #f0f5ff; border-radius: 6px; display: flex; justify-content: center; padding: 3px 15px;}
+.searchBox input{background: transparent; border: 0px; outline: none; font-size: 15px; color: #292929;}
+.searchBox svg{display: flex; font-size: 18px;}
+
+.page3baru{display: flex; justify-content: end;}
+
+.userInfo{padding-left: 10px; text-align: left !important; color: #000 !important; text-transform: capitalize !important;}
+.userInfo h4{display: flex; justify-content: center; font-size: 15px; font-weight: 600; margin-bottom: 0px;}
+.userInfo p{margin-top: 0px; font-size: 12px; color: #000; opacity: 0.7;}
+
+.menuAnom li{font-size: 14px !important;}
+.menuAnom li svg{font-size: 20px !important;}
+
+#notifications .MuiPaper-elevation{right: 14% !important; width: 350px !important; left: auto !important; top: 70px !important;}
+.dropdown_list .head{padding: 4px 0px;}
+.dropdown_list .head h4{font-size: 16px; font-weight: 600;}
+.dropdown_list li.MuiButtonBase-root{background: #ebf6ff !important; color: #000 !important; padding: 10px 15px !important;}
+
+.dropdown_list li.MuiButtonBase-root:hover{background: #e2e8ed !important;}
+
+.dropdowninfo{padding-left: 15px;}
+/* white-space: break-spaces; (untuk meratakan text agar tidak terlalu ke samping) */
+/* line-height: 21px; (untuk justify atas bawah) */
+.dropdowninfo h4{font-size: 14px; font-weight: 500; white-space: break-spaces; line-height: 25px; margin-bottom: 0px;}
+.dropdowninfo h4 b{font-weight: 600; margin-right: 5px;}
+.dropdowninfo p{font-size: 12px; font-weight: 500;}
+
+.text-sky{color: #0858f7 !important;}
+
+.dropdown_list .scroll{max-height: 300px; overflow-y: scroll; overflow-x: hidden;}
+                                       /* END HEADER */
+
+                                       /* SIDEBAR */
+.main .sidebarWrapper{width: 20%; flex: 0 0 20%; transition: all 0.3s;}
+.main .sidebarWrapper.toggle{width: 0%; flex: 0 0 0%;}
+
+.main .sidebarWrapper .sidebar{width: 20%; height: 100vh; position: fixed; max-height: calc(100% - 100px); top: 70px; left: 0px; background: #fff; overflow-y: scroll; overflow-x: hidden; padding-bottom: 40px; transform: all 0.3s;}
+
+.main .sidebarWrapper.toggle .sidebar{left: -100%;}
+
+.main .sidebarWrapper .sidebar ul{margin-bottom: 0px; padding: 10px 15px;}
+
+.main .sidebarWrapper .sidebar::-webkit-scrollbar{width: 3px !important;}
+.main .sidebarWrapper .sidebar::-webkit-scrollbar-thumb{background: transparent !important;}
+.main .sidebarWrapper:hover .sidebar::-webkit-scrollbar{background: #0858f7 !important;}
+
+.main .sidebarWrapper .sidebar ul li{list-style: none;}
+.main .sidebarWrapper .sidebar ul li button{color: #5e5d72 !important; text-align: left; justify-content: left; border-radius: 10px !important; display: flex; padding: 12px 10px !important; align-items: center; font-size: 15px  !important; text-transform: capitalize; font-weight: 600 !important; font-family: "Open Sans", sans-serif !important;}
+
+.main .sidebarWrapper .sidebar ul li button .icon{display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
+.main .sidebarWrapper .sidebar ul li button .icon svg{font-size: 22px;}
+.main .sidebarWrapper .sidebar ul li button *{color: #5e5d72 !important;}
+
+.main .sidebarWrapper .sidebar ul li button .arrow{margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; margin-right: 10px; transition: all 0.3s ease-in-out;}
+
+.main .sidebarWrapper .sidebar ul li button:hover{background: #f1f1f1 !important;}
+.main .sidebarWrapper .sidebar ul li button.active{background: #f1f1f1 !important;}
+
+/* untuk merubah posisi item apabila di klik seperti submenu toggle */
+.main .sidebarWrapper .sidebar ul li button.active .arrow{transform: rotate(90deg);}
+
+.main .sidebarWrapper .sidebar ul .submenu{padding: 0px 45px; position: relative; transition: all 0.3; height: 0px;}
+.main .sidebarWrapper .sidebar ul .submenu::before{content: ''; width: 1px; height: 95%; position: absolute; top: 0px; left: 25px; background: rgba(0, 0, 0, 0.2);}
+.main .sidebarWrapper .sidebar ul .submenu li{width: 100%; list-style: none;}
+/* text-decoration (untuk menghilangkan garis apabila tanda panah ada pada item) */
+/* font-weight (untuk mempertebal tulisan) */
+.main .sidebarWrapper .sidebar ul .submenu li a{color: #5e5d72 !important; text-decoration: none; display: block; padding: 6px 0px; font-size: 14px !important; font-weight: 500; transition: all 0.4s;}
+
+/* hover (untuk merubah warna ketika panah ada pada text) */
+.main .sidebarWrapper .sidebar ul .submenu li a:hover{color: #0858f7 !important;}
+
+/* transition (untuk timing toggle atau lainnya) */
+.main .sidebarWrapper .sidebar ul .submenuWrapper{transition: all 0.3;height: 0px; overflow: hidden;}
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapsed .submenu{opacity: 0; height: auto;}
+
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapse{height: auto; overflow: inherit; opacity: 1; padding: 10px 0px;}
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapse .submenu{opacity: 1; height: auto;}
+
+.logoutWrapper{padding: 0px 25px;}
+.logoutWrapper .logoutBox{width: 100%; height: 130px; padding: 25px; background: #bcd2fd; border-radius: 10px; display: flex; align-items: center; justify-content: center; position: relative; overflow: hidden;}
+
+.logoutWrapper .logoutBox::before{content: ''; width: 70px; height: 70px; background: #0858f7; border-radius: 100%; position: absolute; top: -20px; right: -20px; opacity: 0.5;}
+
+.logoutWrapper .logoutBox::after{content: ''; width: 30px; height: 30px; background: #0858f7; border-radius: 100%; position: absolute; top: 20px; left: 10px; opacity: 0.5;}
+
+.logoutWrapper .logoutBox button{font-size: 14px !important; font-weight: 600 !important;}
+.logoutWrapper .logoutBox button svg{margin-right: 5px; font-size: 18px !important;}
+                                     /* END SIDEBAR */
+
+                                     /* CONTENT DI TENGAH */
+.main .content{width: 80%; flex: 0 0 80%; transition: all 0.3;}
+.main .content.toggle{width: 100%; flex: 0 0 100%;}
+
+.right-content{padding: 100px 30px; padding-bottom: 10px;}
+
+.dashboardBoxWrapper{gap: 20px; width: 100%; flex-wrap: wrap;}
+.dashboardBoxWrapper .dashboardBox{width: 48%; height: 170px; border-radius: 10px; overflow: hidden; padding: 20px; display: flex; flex-direction: column; justify-content: space-around; position: relative; color: #fff; text-transform: capitalize !important;}
+.dashboardBoxWrapper .dashboardBox .col1 h4{font-size: 16px; font-weight: 600;}
+.dashboardBoxWrapper .dashboardBox .col1 span{font-size: 35px; font-weight: bold; line-height: 45px;}
+
+.dashboardBoxWrapper .dashboardBox .icon{display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 10px; background-image: linear-gradient(to bottom right, rgba(0,0,0,0.0), rgba(0,0,0,0.2));}
+.dashboardBoxWrapper .dashboardBox .icon svg{font-size: 40px; opacity: 0.4; color: #fff;}
+
+.dashboardBoxWrapper .dashboardBox .toggleIcon{font-size: 22px; color: rgba(0, 0, 0, 0.5); cursor: pointer; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50%;}
+
+.dashboardBoxWrapper .dashboardBox .chart{ opacity: 0.050; position: absolute; bottom: 20px; left: 20px;}
+
+.dashboardBoxWrapper .dashboardBox .chart svg{font-size: 110px; color: #000;}
+
+.dashboardBoxWrapper .dashboardBox .bottomEle{position: relative; top: 15px;}
+
+.dashboardBoxWrapper .dashboardBox .MuiList-root svg{color: #000 !important; font-size: 17px !important; margin-right: 10px !important;}
+
+.dropdown_menu .MuiBottonBase-root svg{margin-left: 10px !important;}
+
+.box .dashboardBoxTes{width: 100%; height: 100%; background-image: linear-gradient(#0f0f43, #125be8); border-radius: 10px; padding: 25px;}
+
+.toggleIcon{font-size: 22px; color: rgba(0, 0, 0, 0.5); cursor: pointer; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50%;}
+.toggleIcon svg{color: #fff !important; font-size: 20px !important; opacity: 1 !important;}
+
+.box .dashboardBoxTes h6{font-size: 16px; font-weight: 600;}
+.box .dashboardBoxTes p{font-size: 13px; color: #fff; opacity: 0.7;}
+/* .box .dashboardBoxTes */
+.card{margin: 20px 0px; border-radius: 10px;}
+.card .hd{font-size: 18px; font-weight: bold; color: #403e57; padding-left: 10px;}
+
+.cardFilters .col-md-3 h4{font-size: 14px; font-weight: 800; text-transform: capitalize; color: #403e57;}
+
+h1, h2, h3, h4, h5, h6, p{color: #403e57;}
+
+.table-responsive::-webkit-scrollbar-thumb{background: #ccc m !important;}
+
+.table .thead-dark th{background-color: #1866ee !important; border-color: rgba(255, 255, 255, 01) !important; font-size: 14px; color: white;}
+.table tbody td{font-size: 12px !important; color: #403e57; font-weight: 500;}
+
+.table tbody .actions button{min-width: 30px !important; width: 25px !important; height: 25px !important; margin: 0px 3px !important;}
+.table tbody .actions button svg{font-size: 30px !important;}
+
+.table tbody .actions button.secondary{background: rgba(203, 60, 231, 0.2) !important;}
+.table tbody .actions button.success{background: rgba(26, 159, 83, 0.2) !important;}
+.table tbody .actions button.error{background: rgba(241, 17, 51, 0.2) !important;}
+
+table.v-align td{vertical-align: middle !important;}
+
+.table td .old,.table td .new{display: block; width: 100%;}
+
+table td .imgWrapper{width: 20%; flex: 0 0 20%;}
+table td .info{width: 65%; flex: 0 0 65%;}
+
+table td .info h6{overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px; font-weight: 500; margin-bottom: 0px;}
+
+table td .info p{font-size: 13px; line-height: 18px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; color: #5e5d72; margin-bottom: 0px;}
+
+table.v-align td .productBox{width: 270px;}
+/* table.v-align td .productBox .info{width: 100%;} */
+
+.tableFooter{padding-bottom: 20px;}
+.tableFooter .pagination{margin-left: auto;}
+.tableFooter p{font-size: 14px; font-weight: 500px; margin-bottom: 0px;}
+
+.css-1to7aww-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected{background-color: #0858f7 !important;}
+
+                                      /* END CONTENT */
+
+                                      /* Login */
+.loginSection{width: 100%; height: 100vh; padding: 35px 25px; background: #fff; position: relative;}
+/* url(./assets/images/pattern.webp) repeat-x top center */
+.loginPatern{width: 100%; height: 100%; opacity: 0.08; position: fixed; top: 0px; left: 0px; z-index: 99; pointer-events: none;}
+
+.loginSection .loginBox{width: 350px; height: auto; margin: auto;}
+.loginSection .loginBox .wrapper{width: 100%; height: auto; background: #f0f0f0; position: relative; z-index: 100; padding: 35px;}
+
+.loginSection .loginBox .wrapper .form-group{margin-bottom: 18px;}
+
+.loginSection .loginBox .wrapper .form-control{background: #fff !important; box-shadow: none !important; outline: none !important; border-radius: 8px !important; font-size: 14px; font-weight: 600; height: 45px; padding-left: 40px;}
+
+.loginSection .loginBox .wrapper .form-group.focus .icon svg{color: #0858f7 !important;}
+
+.loginSection .loginBox .wrapper .form-control.focus{border: 1px solid #0858f7 !important;}
+
+.loginSection .loginBox .wrapper .form-group .icon{position: absolute; z-index: 100; font-size: 22px; margin-top: 10px; margin-left: 10px;}
+.loginSection .loginBox .wrapper .form-group .icon svg{color: #5e5d72;}
+
+.loginSection .loginBox .wrapper .link{font-size: 12px !important;}
+
+.loginSection .loginBox .wrapper .or span.line{display: block; width: 35%; height: 1px; background: rgba(0, 0, 0, 0.1);}
+.loginSection .loginBox .wrapper .or span.txt{display: flex; align-items: center; justify-content: center; font-size: 16px; font-weight: 600; width: 50px; height: 50px; border: 1px solid rgba(0, 0, 0, 0.2); border-radius: 50%;}
+
+.loginWithGoogle{text-transform: capitalize !important; font-weight: bold !important;}
+                                      /* End Login */
